--- a/components/Contact/Contact.css
+++ b/components/Contact/Contact.css
@@ -24,7 +24,7 @@
   flex-wrap: wrap;
   gap: 1.5rem;
   width: 100%;
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 
 .form__container {
